# non-oversmoothing-gcns

./: .gitignore  LICENSE  README.md  pyproject.toml
Kipf_Welling_shift_operator/: weight_variance_dependence.py
complete_graph/: node_dist_prediction.py  phase_diagram.py
cora/: find_transition.py  performance.py
non_oversmoothing_csbm/: class_distance.py  condition_for_non_oversmoothing.py
performance_on_csbms/: finite_size_GCN.py  gaussian_process_GCN.py
src/GCN_methods/: load_utils.py  models.py  plotting.py  utils.py
