[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GCN_methods"
authors = [{name = "Bastian Epping", email = "epping@cs.rwth-aachen.de"}]
description = "Methods to perform oversmoothing experiments in GCNs"
version = "1.0"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "networkx",
    "tqdm",
    "matplotlib"
]
readme = "README.md"
license = {file = "LICENSE"}

[tool.setuptools.packages.find]
where = ["src"]
